[package]
name = "calib"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for creating calendars with events"
repository = "https://github.com/nmandrus1/calib.git"
read-me = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["std", "serde"] }
num-traits = "0.2.15"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
